<resources>
    <string name="app_name">MarketSpiral</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSICS</string>
    <string name="backdrop_subtitle">This season top 20 music</string>


    <string name="nav_categories">Categories</string>
    <string name="nav_beverages"> Beverages</string>
    <string name="nav_bread_bakery">Bread and Bakery</string>
    <string name="nav_canned_jarred">Canned/Jarred Goods</string>
    <string name="nav_cleaners">Cleaners</string>
    <string name="nav_dairy">Dairy</string>
    <string name="nav_baking">Dry/Baking Goods</string>
    <string name="nav_frozen">Frozen foods</string>
    <string name="nav_meat">Meat</string>
    <string name="nav_produce">produce</string>
    <string name="nav_paper">Paper Good</string>
    <string name="nav_personal_care">Personal Care</string>
    <string name="nav_other">other</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_title">Marketspiral</string>
    <string name="nav_subtitle">let\'s shope together!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="loc_dialog_title">Use Location?</string>
    <string name="loc_dialog_message">wants to change your device settings:
                             inorder to provide offers around your location,location setting must be enabled</string>
    <string name="loc_dialog_positive_btn">Open Location Settings</string>
    <string name="loc_retrive_failed">Location retrive failed</string>
</resources>
